@@ -1,4 +1,5 @@
 ======================
+    FIXED: Strange KrSearch GUI (SearchIn and DontSearchIn adding)
     FIXED: KrSearch crash at pressing Escape or Closing the window during search
     ADDED: Tab-browsing shortens tabs when more tabs are created
     FIXED:
